[gd_scene load_steps=5 format=2]

[ext_resource path="res://core/enemy/Enemy.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 8.45222

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[node name="Enemy" type="Area2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
offset = Vector2( 1, -1 )
hframes = 2
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Pivot" type="Node2D" parent="."]

[node name="BulletPoint" type="Position2D" parent="Pivot"]
position = Vector2( 16, 0 )

[node name="Sprite" type="Sprite" parent="Pivot/BulletPoint"]
scale = Vector2( 0.00195313, 8 )
texture = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="ShootTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
